<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/quiz_layout"
    tools:context=".QuizActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textSize="24sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/years_99"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/years_99"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/years_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/years_100"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/years_101"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/years_101"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/years_116"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/years_116"
                    android:textSize="24sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/q2_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q2_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/q3_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q2_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/iraq_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/iraq_btn"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/iran_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/iran_btn"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/uzbek_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/uzbek_btn"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/afghan_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/afghan_btn"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textSize="24sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/true_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/true_btn"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/false_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/false_btn"
                    android:textSize="24sp" />
            </RadioGroup>

            <Button
                android:id="@+id/quiz_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_quiz" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>